--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tree_training_app">
         <activity
+            android:name=".SuccessfulRegisterTree"
+            android:exported="false" />
+        <activity
+            android:name=".Take_picture_instructions"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
