--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
         classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.10'
+        // Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
     }
 }
 
